Fix quote spacing for audio posts

--- a/src/app/modules/newsfeed/activity/content/content.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.ng.scss
@@ -241,7 +241,8 @@
   // ** QUOTE **
   // *********************************
 
-  .m-activityContent__media + .m-activityContent__quote {
+  .m-activityContent__media + .m-activityContent__quote,
+  .m-activityContent__audioPlayer + .m-activityContent__quote {
     margin-top: $spacing4;
   }
 
